--- a/user_profile.css
+++ b/user_profile.css
@@ -23,7 +23,7 @@ body{
 .col-12{ width:100%;}
 
 div.userleftcol{
-    background-color: rgb(9, 59, 9);
+    background-color: rgb(17, 47, 24);
     display: block;
     text-align: center;
     padding-bottom: 100px;
@@ -59,12 +59,18 @@ div.userleftcol button{
     border: none;
     color: black;
     background-color: white;
+    border-radius: 17px;
     font-weight: 700;
     font-size:14px;
     margin-top:250px;
     padding: 20px;
 
 }
+
+div.userleftcol button:active {
+    background-color: white;
+    transform: translateY(-2px);
+  }
 
 div.container{
     position: absolute;
@@ -74,7 +80,7 @@ div.container{
     height: 35%;
     padding-top:30px;
     background-color: white;
-    color: rgb(4, 31, 4);
+    color: rgb(17, 47, 24);
     text-align: center;
     margin-left: 200px;
     margin-right:200px;
@@ -87,7 +93,7 @@ div.container h1{
 }
 
 div.container .userbuttons button{
-    background-color: rgb(4, 31, 4) ;
+    background-color: rgb(17, 47, 24) ;
     border-radius: 80%;
     
     height: 60px;
@@ -97,13 +103,32 @@ div.container .userbuttons button{
     margin-left:30px ;
 }
 
-#logout{
+div.container .userbuttons button:active {
+    background-color: #0a0e0b;
+    transform: translateY(4px);
+  }
+
+#logout  {
+    text-decoration: none;
     float: right;
     margin:10px ;
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    width: 70px;
-    height: 29px;
+    color: black;
+    border: none;
+    font-size:20px;
+    font-weight:600;
 }
 
+
+#home{
+    text-decoration: none;
+    float: left;
+    margin:10px ;
+    color: black;
+    border: none;
+    font-size:20px;
+    font-weight:600;
+}
+
+#logout:active ,#home:active {
+    transform: translateY(2px);
+  }
